--- a/index.html
+++ b/index.html
@@ -17,58 +17,18 @@
     <title>Bootstrap</title>
     <style>
         div {
-            background-color: red;
+            min-height: 50px;
         }
     </style>
 </head>
 
 <body>
-    <!-- background change -->
 
-    <div class="bg-primary">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error eius recusandae reiciendis soluta dolore, a adipisci saepe in nesciunt quos, temporibus et totam voluptatibus ullam! Quidem alias enim consequuntur atque?
-    </div>
-    <!-- Text change -->
 
-    <h1 class="text-center text-capitalize fs-2">hii</h1>
-    <!-- background change -->
-    <div class="bg-dark text-light">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore dolorem rerum ad praesentium ut deserunt obcaecati ea quibusdam. Cumque saepe aut accusamus obcaecati eos repudiandae nesciunt ex voluptate aliquam ab.
+    <div class="container-lg bg-primary p-2">
+        <div class="w-25 bg-warning m-2 d-inline-block"></div>
+        <div class="w-25 bg-warning m-2 d-inline-block"></div>
     </div>
-    <br>
-    <!-- Border -->
-    <h2 class="h1 border border-5 border-primary">hhhhh</h2>
-    <!-- Change border Y margin -->
-    <h2 class="h1 border border-5 border-primary mx-4 ">hhhhh</h2>
-    <!-- Change border x margin -->
-    <h2 class="h1 border border-5 border-primary my-4 ">hhhhh</h2>
-    <!-- Container -->
-    <div class="bg-dark container text-white p-2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aliquid quidem unde quis eos error fuga pariatur est quaerat explicabo nemo eveniet sapiente illum asperiores deserunt, corrupti odio placeat voluptatum!
-    </div>
-    <br>
-    <!-- Container -->
-    <div class="bg-dark container-fluid text-white p-2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aliquid quidem unde quis eos error fuga pariatur est quaerat explicabo nemo eveniet sapiente illum asperiores deserunt, corrupti odio placeat voluptatum!
-    </div>
-    <div class="contanier bg-dark">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta cum sint minus quae quo dolores beatae quis omnis in maxime, ullam maiores aspernatur possimus, amet modi alias odit libero adipisci?
-    </div>
-    <br>
-    <!-- Media Query break point -->
-    <div class=" container-xxl bg-secondry text-white p-0 p-lg-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi itaque sint unde at quam aspernatur repellendus aut aliquid voluptas suscipit saepe enim incidunt omnis dolores voluptates neque, veritatis sit molestiae!
-
-    </div>
-    <br>
-    <style>
-        div {
-            min-height: 70px;
-        }
-    </style>
-    <div class="container-lg bg-primary p-2"></div>
-    <div class="w-25 bg-warning m-2 d-inline-block"></div>
-    <div class="w-25 bg-warning m-2 d-inline-block"></div>
-
 </body>
 
 </html>
