--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 
     <title>Bootstrap</title>
     <style>
-        div {
-            min-height: 50px;
+        div.row {
+            background-color: black;
+        }
+        
+        div.row div {
+            background-color: #ffbf00;
+            margin: 10px;
         }
     </style>
 </head>
@@ -25,10 +30,23 @@
 <body>
 
 
-    <div class="container-lg bg-primary p-2">
-        <div class="w-25 bg-warning m-2 d-inline-block"></div>
-        <div class="w-25 bg-warning m-2 d-inline-block"></div>
+    <div class="container-lg">
+        <div class="row">
+            <div class="col-sm">One of three columns</div>
+            <div class="col-sm">One of three columns</div>
+            <div class="col-sm">One of three columns</div>
+        </div>
     </div>
+    <!-- Flex grow -->
+    <div class="container-lg">
+        <div class="row">
+            <div class="col-1">One of three columns</div>
+            <div class="col-7">One of three columns</div>
+            <div class="col-9">One of three columns</div>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
