--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Bootstrap</title>
     <style>
         div.row {
-            background-color: black;
+            background-color: rgb(216, 27, 27);
         }
         
         div.row div {
@@ -32,20 +32,18 @@
 
     <div class="container-lg">
         <div class="row">
-            <div class="col-sm">One of three columns</div>
-            <div class="col-sm">One of three columns</div>
-            <div class="col-sm">One of three columns</div>
+            <div class="col-5 border boder-4">One of three columns</div>
+            <div class="col-8 ">One of three columns</div>
+            <div class="col-10 ">One of three columns</div>
+            <div class="col-4 ">One of three columns</div>
+            <div class="col-8 ">One of three columns</div>
+            <div class="col-2">One of three columns</div>
+            <div class="col-9 ">One of three columns</div>
+            <div class="col-3">One of three columns</div>
+            <div class="col-4">One of three columns</div>
         </div>
     </div>
-    <!-- Flex grow -->
-    <div class="container-lg">
-        <div class="row">
-            <div class="col-1">One of three columns</div>
-            <div class="col-7">One of three columns</div>
-            <div class="col-9">One of three columns</div>
-        </div>
 
-    </div>
 
 </body>
 
