--- a/index.html
+++ b/index.html
@@ -48,11 +48,198 @@
                     <p class="my-4">
                         At Dart , we make it our mission to help you discover and buy from the best emerging artists around the world. Dart is your portal to thousands of original works by today’s top artists.
                     </p>
+                    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll"> Enquire Now</button>
                 </div>
                 <img class="w-50 d-none d-sm-block" src="https://images.unsplash.com/photo-1562963527-ab1b093b0ff7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=948&q=80" alt="" />
             </div>
         </div>
+        <div>
+        </div>
+        <!-- Modal -->
+        <div class="modal" id="enroll" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <!-- <span aria-hidden="true">&times;</span> -->
+                  </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Fill out this form and we will get back to you</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                        <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                            Close
+                          </button> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="enrollLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="enrollLabel">Enrollment</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="lead">Fill out this form and we will get back to you</p>
+                        <form>
+                            <div class="mb-3">
+                                <label for="first-name" class="col-form-label">
+                    First Name:
+                  </label>
+                                <input type="text" class="form-control" id="first-name" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="last-name" class="col-form-label">Last Name:</label>
+                                <input type="text" class="form-control" id="last-name" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="col-form-label">Email:</label>
+                                <input type="email" class="form-control" id="email" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="phone" class="col-form-label">Phone:</label>
+                                <input type="tel" class="form-control" id="phone" />
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                Close
+              </button>
+                        <button type="button" class="btn btn-primary">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <!-- End modal -->
     </section>
+    <!-- Search Navbar -->
+    <section class="bg-dark text-light p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between align-items-center">
+                <h3 class="md-3 md-md-0">Sing Up For Our Newsletter</h3>
+                <div class="input-group news-input">
+                    <input type="text" class="form-control" placeholder="Enter Email">
+                    <button class="btn btn-primary btn-lg " type="button">Submit</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- <div class="col-10">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/46992/flexfun04.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="..." alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="..." alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div> -->
+
+    <!-- Learn Sections -->
+    <br>
+    <section id="learn" class="p-0 md-5 bg-dark text-light  ">
+        <div class="container">
+            <div class="row align-items-center justify-content-between ">
+                <div class="col-md p-5">
+                    <h2>Buy Paintings</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ratione commodi sint, sapiente vitae magni aspernatur voluptatibus itaque reiciendis autem pariatur dolores? Sunt quisquam sequi at facere illo officia! Voluptatem!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda quam facilis illum cumque totam beatae vel magni possimus, fugit atque. Beatae commodi impedit dolorem accusamus deserunt sit mollitia rem velit.</p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i><i>Read More</i></a>
+                </div>
+                <div class="col-md">
+                    <img src="https://images.unsplash.com/photo-1627843240167-b1f9d28f732e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2232&q=80" class="img-fluid" alt="" />
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
+    <!-- Question Accordion -->
+    <section id="questions" class="p-5">
+        <div class="container">
+            <h2 class="text-center md-4">Frequently Asked Question</h2>
+            <div class="accordion accordion-flush" id="questions">
+                <!-- First question -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
+                            How do you ship ?
+                    </button></h2>
+                    <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, sapiente doloremque expedita neque beatae ipsum error enim, sint, omnis molestiae similique aspernatur cumque! Ipsam accusamus sequi nostrum ea reprehenderit itaque.
+                        </div>
+
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
+                            Where are you located ?
+                    </button></h2>
+                    <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, sapiente doloremque expedita neque beatae ipsum error enim, sint, omnis molestiae similique aspernatur cumque! Ipsam accusamus sequi nostrum ea reprehenderit itaque.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
+                            What happens if i dont receive my piece ?
+                    </button></h2>
+                    <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, sapiente doloremque expedita neque beatae ipsum error enim, sint, omnis molestiae similique aspernatur cumque! Ipsam accusamus sequi nostrum ea reprehenderit itaque.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos fugiat illum aliquam modi aliquid veniam in, libero neque, non, ipsa adipisci vitae aut. Pariatur assumenda expedita excepturi et labore quibusdam dolor quaerat ex accusantium! Asperiores
+        quae dicta cumque nostrum aliquam illum in totam sed voluptate labore id, dolorem pariatur exercitationem necessitatibus laboriosam, alias, reiciendis porro? Assumenda labore consequuntur voluptate, unde quis temporibus eum dicta beatae molestiae
+        facere laborum et repudiandae obcaecati laudantium amet tenetur nam explicabo voluptatum magnam, eaque porro aspernatur. Autem dicta esse, omnis sunt sapiente itaque, nam ipsa, reiciendis similique dolor officia asperiores nesciunt? Dolores assumenda
+        ipsam adipisci placeat enim molestiae natus modi amet corrupti. Laudantium delectus commodi tenetur quidem odio nam animi distinctio sit fugit neque ratione, officiis ab, mollitia in veritatis aut perferendis illo dicta tempora iste. Nostrum iure
+        tempora, doloremque quos odio aliquam sit excepturi nobis qui natus quasi corrupti eum, voluptatem veritatis minus. Corrupti sint exercitationem delectus mollitia tempora libero neque placeat ipsam quos, laudantium quaerat voluptates laboriosam
+        perspiciatis, vel voluptate nobis odit enim assumenda cum magni quo sed recusandae quia. Necessitatibus consequuntur tempora accusantium eaque deserunt laudantium iusto? Harum quo nemo beatae culpa consequatur, perspiciatis odio laudantium odit
+        obcaecati earum, vel rem molestias voluptas adipisci impedit pariatur minima soluta, unde nesciunt itaque aut debitis quam corrupti enim. Reiciendis, ducimus voluptatem iure ullam illum voluptates eius porro provident autem asperiores exercitationem
+        mollitia dignissimos dolore natus? Ipsam corrupti natus molestiae! Ipsum pariatur laborum dicta laudantium itaque porro incidunt, labore repellendus fuga quisquam molestias ea vel excepturi soluta saepe quod eaque! Eos iusto obcaecati, quod reprehenderit
+        aperiam in delectus exercitationem veniam corporis quia voluptate consectetur maiores debitis, dignissimos illo impedit vero labore laboriosam earum, dolorem minima aut. Aliquam officiis fugiat id repellendus ut, harum pariatur enim voluptates
+        impedit ab perspiciatis quaerat est placeat? Incidunt id dolor reiciendis, reprehenderit expedita quam delectus repudiandae pariatur libero rerum voluptatibus sed atque porro soluta! Asperiores sapiente eos vel repellat nihil molestias, qui iste
+        cum alias tenetur quae. A, est numquam, sequi, quia rem cum libero labore mollitia temporibus dolorem unde sed eos placeat perspiciatis dolorum autem minus voluptates accusantium quaerat laudantium pariatur veniam tenetur? Facere libero inventore
+        quam non sint nostrum dicta provident, voluptate autem blanditiis ut voluptatum maiores quo voluptatibus, perspiciatis, necessitatibus neque expedita. Molestias tempora molestiae facilis mollitia assumenda similique beatae deserunt amet nostrum
+        optio architecto, aspernatur quas, ad animi quo. Iure ex, rem cupiditate corrupti ipsum veniam delectus recusandae ea incidunt reiciendis consequatur at nihil ullam neque exercitationem sint odio! Officia qui voluptas enim placeat sequi totam
+        quam eius dolore consequatur ipsum debitis, nemo atque maiores neque et sunt natus soluta itaque at? Soluta nostrum laboriosam minus nulla exercitationem, fuga maxime illo aut? Beatae non cupiditate ipsa voluptatem quia, possimus, quam alias rem
+        odit deserunt quo quis nisi ea tempora quae molestiae totam consectetur dolorum eius necessitatibus suscipit est sequi. Corrupti amet, harum consequatur nisi quisquam officiis consectetur laudantium, laboriosam, tempora non iste dolor at omnis!
+        Velit explicabo aliquid, hic assumenda quia quod obcaecati autem ipsa nemo!</p>
 </body>
 
 </html>
